# osteak

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  osteak.bail
.github/workflows/: ci.yml  release.yml
.ostk/: boot.md
.ostk/needles/: issues.jsonl
docs/: EVALUATION.md  REQUIREMENTS.md
examples/: async_tasks.rs  counter.rs  counter_manual.rs  multi_pane.rs
src/: action.rs  cmd.rs  lib.rs  runner.rs  sub.rs
tests/: composition.rs  sub_lazy.rs  tea_cycle.rs
