[package]
name = "osteak"
version = "0.1.0"
edition = "2024"
description = "TEA (The Elm Architecture) for ratatui — you keep the event loop"
license = "MIT OR Apache-2.0"
repository = ""
keywords = ["ratatui", "tui", "elm", "tea", "terminal"]
categories = ["command-line-interface"]

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", optional = true }
tokio = { version = "1", features = ["rt", "sync", "macros"], optional = true }
futures-core = "0.3"

[features]
default = ["crossterm-backend", "tokio-runtime"]
crossterm-backend = ["dep:crossterm"]
tokio-runtime = ["dep:tokio"]
