[package]
name = "osteak"
version = "0.1.4"
edition = "2024"
rust-version = "1.86.0"
description = "Elm for ratatui — you bring the loop"
license = "MIT"
repository = "https://github.com/os-tack/osteak"
homepage = "https://github.com/os-tack/osteak"
documentation = "https://docs.rs/osteak"
readme = "README.md"
keywords = ["ratatui", "tui", "elm", "tea", "terminal"]
categories = ["command-line-interface"]
exclude = [
    ".github/",
    ".ostk/",
    ".claude/",
    ".mcp.json",
    "*.bail",
    "docs/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"], optional = true }
tokio = { version = "1", features = ["rt", "sync", "macros", "time"], optional = true }
tokio-stream = { version = "0.1", optional = true }
futures-core = "0.3"
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["crossterm-backend", "tokio-runtime"]
crossterm-backend = ["dep:crossterm"]
tokio-runtime = ["dep:tokio", "dep:tokio-stream", "dep:futures"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints.rust]
unsafe_code = "forbid"
